# vanillaplusjs

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg
.github/workflows/: publish.yml  test.yml
src/: adder.py  constants.py  main.py
src/runners/: build.py  dev.py  init.py  run.py
tests/: helper.py  test_adder.py  test_build.py  test_build_feat_canonical_urls.py  test_build_feat_constants.py  test_build_feat_css_data_src.py  test_build_feat_css_icons.py  test_build_feat_css_nest.py  test_build_feat_external_files.py  test_build_feat_hashed_link_stylesheet.py  test_build_feat_hashed_preload.py  test_build_feat_hashed_script.py  test_build_feat_html_templates.py  test_build_feat_image_glue.py  test_build_feat_images.py  test_build_feat_js_comments.py  test_build_feat_js_hashed_import.py  test_build_feat_js_regex.py  test_build_feat_js_strings.py  test_build_feat_js_type_hint.py  test_build_feat_og_url.py  test_build_feat_outlining.py  test_build_graph.py  test_clean.py  test_html5lib.py  test_imports.py  test_init.py
vanillaplusjs/: constants.py  http_server.py  main.py
vanillaplusjs/runners/: build.py  clean.py  dev.py  init.py  run.py
