
[metadata]
name = vanillaplusjs
version = 0.0.6
author = Timothy Moore
author_email = mtimothy984@gmail.com
url = https://github.com/tjstretchalot/vanillaplusjs
description = A lightweight html/css/js framework
long_description = file: README.md
long_description_content_type = text/markdown
requires_dist = setuptools
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Pre-processors
    Intended Audience :: Developers
[options]
packages =
    vanillaplusjs
install_requires =
    pillow
    pytypeutils
    requests
    loguru
    html5lib
    watchdog

[options.entry_points]
console_scripts =
    vanillaplusjs = vanillaplusjs.main:main
